redfactor#10 tons of changes in css changed still occured problem with agendas, changed way to display chosen agenda

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,10 @@
 <div>
-  <h2 class="app-name">Board Meetings App</h2>
-  <router-outlet></router-outlet>
-
+  <div>
+    <h2 class="app-name">Board Meetings App</h2>
+    <router-outlet></router-outlet>
+  </div>
 </div>
-<div style="padding-bottom: 135px"></div>
+<div class="main-container" style="padding-bottom: 135px"></div>
 <div>
   <app-footer></app-footer>
 </div>
