--- a/frontend/src/app/new-meeting-page/invites/invites.component.html
+++ b/frontend/src/app/new-meeting-page/invites/invites.component.html
@@ -1,10 +1,10 @@
 <div class="invites-container">
-    <mat-card-content class="main-card">
+    <mat-card-content class="main-card main-card">
         <div class="flex-box-space-right">
-            <h2>Invites</h2>
+            <h2 class="padding-standard">Invites</h2>
         </div>
         <div>
-            <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
+            <mat-tab-group class="mat-tab-labels padding-small">
                 <mat-tab label="Board">
                     <div class="separator-forInvites"></div>
                     <br>
