--- a/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,8 +1,10 @@
 <div class="top-items-grid">
-    <div class="padding-left-30px">
-        <button mat-icon-button matSuffix routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
+    <div class="padding-left-oversize">
+        <button mat-icon-button matSuffix
+            routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
 </div>
-<div class="separator-horizontal margin-top-10px" style></div>
-<div class="centered-top-container padding-20px"><mat-icon>error</mat-icon><h2>Page not found</h2></div>
-
+<div class="separator-horizontal" style></div>
+<div
+    class="centered-top-container padding-standard"><mat-icon>error</mat-icon><h2>Page
+        not found</h2></div>
