--- a/frontend/src/app/dialog-info/dialog-info.component.html
+++ b/frontend/src/app/dialog-info/dialog-info.component.html
@@ -1,7 +1,7 @@
 
 <div>
     <div>
-        <div *ngIf="!meeting" class="centered-top-container padding-20px">
+        <div *ngIf="!meeting" class="centered-top-container padding-standard">
             <mat-spinner></mat-spinner>
         </div>
     </div>
