--- a/frontend/src/app/dialog-list/dialog-list.component.html
+++ b/frontend/src/app/dialog-list/dialog-list.component.html
@@ -3,16 +3,19 @@
     <form [formGroup]="form">
         <div mat-dialog-content>
             <div class="center">
-                <input matInput class="custom-input top-input" matInput type="text" formControlName="agendaName"
+                <input matInput class="custom-input top-input" matInput
+                    type="text" formControlName="agendaName"
                     placeholder="Agenda Name">
             </div>
             <div class="container">
-                <div *ngIf="list.length > 0">
+                <div *ngIf="order.length > 0">
                     <div class="label-cus">
                         <label>Order:</label>
                     </div>
-                    <div cdkDropList class="list-items" (cdkDropListDropped)="drop($event)">
-                        <div class="box" *ngFor="let item of list; index as i" cdkDrag>
+                    <div cdkDropList class="list-items"
+                        (cdkDropListDropped)="drop($event)">
+                        <div class="box" *ngFor="let item of order; index as i"
+                            cdkDrag>
                             <span>{{ item }}</span>
                             <button mat-icon-button (click)="removeElement(i)">
                                 <mat-icon class="small-icon">delete</mat-icon>
@@ -24,7 +27,8 @@
 
             <div class="line-items">
                 <div class="bottom-input">
-                    <input matInput class="custom-input " matInput type="text" #newElement>
+                    <input matInput class="custom-input " matInput type="text"
+                        #newElement>
                 </div>
                 <button mat-flat-button (click)="addElement(newElement.value)">
                     <mat-icon>playlist_add</mat-icon>
@@ -32,9 +36,11 @@
 
             </div>
             <div class="flex-box-space-right">
-                <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="form"
+                <button mat-stroked-button class="main-container select-buttons"
+                    [mat-dialog-close]="form"
                     [disabled]="form.invalid">Create</button>
-                <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
+                <button mat-stroked-button class="main-container select-buttons"
+                    mat-dialog-close
                     type="button">Close</button>
             </div>
         </div>
