--- a/frontend/src/app/dialog-select/dialog-select.component.html
+++ b/frontend/src/app/dialog-select/dialog-select.component.html
@@ -6,8 +6,7 @@
         <h3>No agendas</h3>
         <br>
         <div class="avatar-container">
-            <mat-icon
-                style="margin-right: 5px;">notification_important</mat-icon>
+            <mat-icon>notification_important</mat-icon>
             <p>The agenda list is empty</p>
         </div>
     </div>
