--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -1,37 +1,53 @@
-<div class="top-items-grid">
-    <div class="padding-left-30px">
+<div *ngIf="activeHamburger" class="centered-container padding-standard">
+    <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
+        {{editedMeetingId}}</h2>
+    <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
+        id
+        №{{editedMeetingId}}</h2>
+    <div class="burger-line-icons">
+        <div class="burger-line-icons main-card padding-standard"
+            mat-icon-button
+            routerLink="/home">
+            <button mat-icon-button
+                matSuffix><mat-icon>keyboard_backspace</mat-icon></button>
+            <p>Go back</p>
+        </div>
+    </div>
+</div>
+<div *ngIf="!activeHamburger" class="top-items-grid">
+    <div class="back-page-continer padding-left-oversize">
         <button mat-icon-button matSuffix
             routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
-    <h2 *ngIf="!getMeetingError" class="padding-20px">Edit Meeting №
+    <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
         {{editedMeetingId}}</h2>
-    <h2 *ngIf="getMeetingError" class="padding-20px">Not found meeting with id
+    <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
+        id
         №{{editedMeetingId}}</h2>
-    <div class="near-button-container gap-20px"
+    <div class="near-button-container gap-20px padding-standard"
         matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
         [matTooltipDisabled]="!formDisabled">
         <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
         <!-- saveDraft - coming soon -->
-        <button mat-stroked-button class="padding-20px"
-            (click)="saveAndPublish()"
+        <button mat-stroked-button (click)="saveAndPublish()"
             [disabled]="formDisabled">
             Save & Publish</button>
     </div>
 </div>
-<div class="centered-container ">
-    <div class="separator-horizontal margin-top-10px" style></div>
+<div class="centered-container">
+    <div class="separator-horizontal" style></div>
 </div>
 
-<div *ngIf="getMeetingError" class="centered-top-container padding-20px">
+<div *ngIf="getMeetingError" class="centered-top-container padding-standard">
     <mat-icon>warning</mat-icon>
     <h2>{{getMeetingError}}</h2>
 </div>
-<div *ngIf="loadingMeeting" class="centered-top-container padding-20px">
+<div *ngIf="loadingMeeting" class="centered-top-container padding-standard">
     <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="!getMeetingError && !loadingMeeting">
-    <div class="main-container">
-        <div class="main-menu">
+    <div class="main-container base-container">
+        <div>
             <app-new-meeting [editedMeeting]="editedMeeting"
                 (formEmitter)="receiveForm($event)"></app-new-meeting>
         </div>
@@ -42,4 +58,17 @@
             <app-invites [invitedToEdited]="invitedToEdited"></app-invites>
         </div>
     </div>
+
+    <div *ngIf="activeHamburger"
+        class="centered-container bigger-padding-bottom">
+        <mat-card-content class="container main-card main-card">
+            <div>
+                <button mat-stroked-button class="padding-standard"
+                    (click)="saveAndPublish()"
+                    [disabled]="formDisabled">
+                    Save & Publish</button>
+            </div>
+        </mat-card-content>
+    </div>
+
 </div>
