--- a/frontend/src/app/new-meeting-page/invites/board/board.component.html
+++ b/frontend/src/app/new-meeting-page/invites/board/board.component.html
@@ -1,21 +1,26 @@
 <div>
     <div>
         <mat-form-field class="wider-input">
-            <input matInput [(ngModel)]="wanted" (input)="search()" placeholder="Search" />
+            <input matInput [(ngModel)]="wanted" (input)="search()"
+                placeholder="Search" />
         </mat-form-field>
         <ul>
-            <mat-checkbox (click)="handleCheckAll()" [checked]="allChecked" class="margin-left-minus-40px">
-                <span class=""> ALL </span>
+            <mat-checkbox (click)="handleCheckAll()" [checked]="allChecked"
+                class>
+                <span class> ALL </span>
             </mat-checkbox>
             <div class="separator-25rem-width"></div>
             <div class="div-list">
-                <li *ngFor="let pop of searchedList; let i = index" class="list-item margin-left-minus-40px">
+                <li *ngFor="let pop of searchedList; let i = index"
+                    class="list-item ">
                     <div class="padding-bottom-10px">
-                        <mat-checkbox [checked]="pop.invited" (click)="checkPerson(i)" class="margin-minus-10px">
-                            <span class=""> {{ pop.name }} </span>
-                            <span class=""> {{ pop.surname }} </span>
+                        <mat-checkbox [checked]="pop.invited"
+                            (click)="checkPerson(i)" class="margin-minus-10px">
+                            <span class> {{ pop.name }} </span>
+                            <span class> {{ pop.surname }} </span>
                             <br>
-                            <span class="job-positon"> {{ pop.jobPosition }} </span>
+                            <span class="job-positon"> {{ pop.jobPosition }}
+                            </span>
                         </mat-checkbox>
                         <br>
                     </div>
