--- a/frontend/src/app/new-meeting-page/invites/guests/guests.component.html
+++ b/frontend/src/app/new-meeting-page/invites/guests/guests.component.html
@@ -1,6 +1,6 @@
 <div>
     <ul>
-        <li *ngFor="let pop of guestsList; let i = index" class="list-item margin-left-minus-40px">
+        <li *ngFor="let pop of guestsList; let i = index" class="list-item ">
             <div *ngIf="pop.invited">
                 <span> {{ pop.name }} </span>
                 <span> {{ pop.surname }} </span>
