--- a/frontend/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/frontend/src/app/new-meeting-page/new-meeting-page.component.html
@@ -1,11 +1,23 @@
-<div class="top-items-grid">
-  <div class="padding-left-30px">
+<div *ngIf="activeHamburger" class="centered-container padding-standard">
+  <h2 class="padding-standard">Create new meeting</h2>
+  <div class="burger-line-icons">
+    <div class="burger-line-icons main-card padding-standard"
+      mat-icon-button
+      routerLink="/home">
+      <button mat-icon-button
+        matSuffix><mat-icon>keyboard_backspace</mat-icon></button>
+      <p>Go back</p>
+    </div>
+  </div>
+</div>
+<div *ngIf="!activeHamburger" class="top-items-grid">
+  <div class="padding-left-oversize">
     <button mat-icon-button matSuffix routerLink="/home">
       <mat-icon>keyboard_backspace</mat-icon>
     </button>
   </div>
-  <h2 class="padding-20px">Create new meeting</h2>
-  <div class="near-button-container gap-20px padding-20px"
+  <h2 class="padding-standard">Create new meeting</h2>
+  <div class="near-button-container gap-20px padding-standard"
     matTooltip="Fields Meeting Name, Meeting Type, one Location type, date and time are mandatory to unlock"
     [matTooltipDisabled]="!formDisabled">
     <!-- <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button> -->
@@ -16,10 +28,10 @@
   </div>
 </div>
 <div class="centered-container ">
-  <div class="separator-horizontal margin-top-10px" style></div>
+  <div class="separator-horizontal" style></div>
 </div>
-<div class="main-container">
-  <div class="main-menu">
+<div class="main-container base-container">
+  <div>
     <app-new-meeting [editedMeeting]="editedMeeting"></app-new-meeting>
   </div>
   <div class="separator-vertical"></div>
@@ -27,5 +39,16 @@
     <app-tasks [initialTasks]="editedTasks"
       (tasksListOutput)="saveTasksList($event)"></app-tasks>
     <app-invites [invitedToEdited]="invitedToEdited"></app-invites>
+  </div>
+  <div *ngIf="activeHamburger"
+    class="centered-container bigger-padding-bottom">
+    <mat-card-content class="container main-card main-card">
+      <div>
+        <button mat-stroked-button class="padding-standard"
+          (click)="saveAndPublish()"
+          [disabled]="formDisabled">
+          Save & Publish</button>
+      </div>
+    </mat-card-content>
   </div>
 </div>
