--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,11 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
 html,
+body {
+  background: var(--my-accent-background-color);
+}
+
 body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0;
-  background: linear-gradient(90deg, rgba(172, 191, 255, 0.3) 0%, rgba(255, 255, 255, 1) 3%, rgba(255, 255, 255, 1) 97%, rgb(172, 192, 255, 0.3) 100%);
 }
 
 * {
@@ -13,13 +17,16 @@ body {
 }
 
 .app-name {
-  padding: 20px 20px 20px 50px;
+  background: var(--my-primary-background-color);
+  padding: 60px 60px 20px 60px;
+  margin: 0px;
 }
 
 .top-items-grid {
   display: grid;
   grid-template-columns: auto auto auto;
   align-items: center;
+  background: var(--my-primary-background-color);
 }
 
 .avatar-container {
@@ -45,7 +52,7 @@ body {
 }
 
 button.select-buttons.active {
-  background-color: black;
+  background-color: var(--my-accent-color);
   color: white;
 }
 
@@ -56,8 +63,7 @@ button.select-buttons.active {
 }
 
 .meeting-form {
-  width: 38rem;
-  padding: 20px 20px 20px 0px;
+  padding: 20px 20px 20px 10px;
 }
 
 .side-menu {
@@ -67,9 +73,7 @@ button.select-buttons.active {
 }
 
 .select-buttons {
-  margin-right: 15px;
   height: 3rem !important;
-  margin-left: 0px;
 }
 
 .select-buttons-agenda {
@@ -94,23 +98,20 @@ ul {
   margin-top: 4px;
 }
 
-.margin-left-minus-40px {
-  margin-left: -40px;
-}
-
-.margin-left-50prc {
-  margin-left: 50%;
-}
 
 .margin-top-10px {
   margin-top: 10px;
 }
 
-.padding-left-30px {
+.padding-left-oversize {
   padding-left: 30px;
 }
 
-.padding-20px {
+.padding-small {
+  padding: 10px;
+}
+
+.padding-standard {
   padding: 20px;
 }
 
@@ -131,11 +132,16 @@ ul {
 .main-container {
   display: flex;
   justify-content: center;
-  background-color: rgba(172, 191, 255, 0.3)
+  /* background-color: rgba(172, 191, 255, 0.3) */
 }
 
-mat-card-content {
-  background-color: var(--my-primary-background-color);
+.base-container {
+  background: var(--my-accent-background-color)
+}
+
+.select-buttons-group {
+  display: flex;
+  /* padding: 10px; */
 }
 
 .centered-top-container {
@@ -150,6 +156,7 @@ mat-card-content {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: var(--my-primary-background-color);
 }
 
 .list-item {
@@ -163,10 +170,6 @@ mat-card-content {
   justify-content: space-between;
   width: 100%;
   padding-right: 0px;
-}
-
-.float-right {
-  float: right;
 }
 
 .task-name {
@@ -193,6 +196,16 @@ app-new-meeting {
 
 app-tasks {
   flex: 4;
+}
+
+.burger-line-icons {
+  display: flex;
+  align-items: center;
+  border-radius: 100px !important;
+}
+
+.single-button-cont {
+  margin-bottom: 5px;
 }
 
 .separator-vertical {
@@ -222,11 +235,11 @@ app-tasks {
 }
 
 .mat-mdc-form-field-focus-overlay .ng-star-inserted {
-  background-color: white;
+  background-color: var(--my-primary-background-color);
 }
 
 .mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled.mdc-text-field--no-label {
-  background-color: white;
+  background-color: var(--my-primary-background-color);
 }
 
 .mat-mdc-text-field-wrapper.mdc-text-field.mdc-text-field--filled.mdc-text-field--no-label.mdc-text-field--disabled {
@@ -249,7 +262,8 @@ app-tasks {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 20px;
+  padding: 20px;
+  background: var(--my-primary-background-color);
 }
 
 .my-list-container {
@@ -279,25 +293,44 @@ app-tasks {
 
 .main-card {
   border-radius: 10px;
-  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1)
+  box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
+  background: var(--my-primary-background-color);
+}
+
+.main-menu {
+  padding: 50px 80px 80px 80px;
+}
+
+.single-select-but {
+  display: flex;
+  padding: 15px;
+}
+
+.select-buttons-group {
+  display: flex;
+  flex-direction: row;
 }
 
 @media only screen and (max-width: 1000px) {
-  .main-container {
+  /* .main-container {
     display: inline;
+  } */
+
+  .main-menu {
+    padding: 50px
+  }
+
+  .side-menu {
+    max-width: 95%;
   }
 
   .app-name {
     padding: 20px;
   }
 
-  .main-menu {
-    margin-left: 20px;
-  }
-
   .meeting-form {
-    margin-left: 0px;
     width: 95%;
+    padding: 20px;
   }
 
   .calendar-container {
@@ -305,12 +338,12 @@ app-tasks {
   }
 
   .wider-input {
-    width: 95%;
+    width: 100%;
     padding: 0%;
   }
 
-  .my-list {
-    width: 100%;
+  .side-menu {
+    padding: 20px;
   }
 
   .top-items-grid {
@@ -324,18 +357,52 @@ app-tasks {
   .separator-horizontal {
     width: 100%;
   }
-}
 
-@media only screen and (min-width: 1300px) {
-  .main-menu {
-    /* margin-left: 10%; */
+  .single-select-but {
+    padding: 0px;
+    flex-direction: column;
   }
-}
 
-@media only screen and (min-width: 1400px) {
-  .main-menu {
-    /* margin-left: 15%; */
+  .select-buttons-group {
+    padding: 0px;
+    flex-direction: column;
   }
+
+  .meeting-form {
+    width: 100%;
+    padding: 0px;
+  }
+
+  .side-menu {
+    padding: 10px 0px 10px 0px;
+  }
+
+  .foot-container {
+    height: 100px;
+  }
+
+  .bigger-padding-bottom {
+    padding-bottom: 135px;
+    background-color: var(--my-accent-background-color);
+  }
+
+  .select-buttons-group.force-that.shiet {
+    display: flex !important;
+  }
+
+
+  .top-items-grid {
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .main-container {
+    display: flex;
+    flex-direction: column;
+  }
+
 }
 
 @media only screen and (min-width: 1700px) {
