refactor#11 final css changes

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div>
   <div>
     <h2 class="app-name">Board Meetings App</h2>
-    <router-outlet></router-outlet>
+    <div>
+      <router-outlet></router-outlet>
+    </div>
   </div>
-</div>
-<div class="main-container" style="padding-bottom: 135px"></div>
-<div>
-  <app-footer></app-footer>
-</div>
+  <div class="accent-color" style="padding-bottom: 140px;"></div>
+  <div>
+    <app-footer></app-footer>
+  </div>
