--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<!-- <div *ngIf="activeHamburger" class="centered-container padding-standard">
+<!-- <div *ngIf="activeHamburger" class="center-content padding-standard">
     <h2 *ngIf="!getMeetingError" class="padding-standard">Edit Meeting №
         {{editedMeetingId}}</h2>
     <h2 *ngIf="getMeetingError" class="padding-standard">Not found meeting with
@@ -35,6 +35,6 @@
             Save & Publish</button>
     </div>
 </div>
-<div class="centered-container">
+<div class="center-content">
     <div class="separator-horizontal" style></div>
 </div> -->
