--- a/frontend/src/app/dialog-form/dialog-form.component.html
+++ b/frontend/src/app/dialog-form/dialog-form.component.html
@@ -1,17 +1,22 @@
 <div>
-    <div class="centered-container">
+    <div class="center-content">
         <h1 mat-dialog-title>{{ title }}</h1>
     </div>
     <form class="flex-box-space" [formGroup]="form">
         <div mat-dialog-content class="mat-dailog-cont">
-            <div class="wider-element wider-container wider-box lower-input list-elements" *ngFor="let field of fields">
+            <div
+                class="wider-element wider-container wider-box lower-input list-elements"
+                *ngFor="let field of fields">
                 <label class="list-elements">{{ field }} </label>
-                <input class="task-input" matInput type="text" [formControlName]="field">
+                <input class="task-input" matInput type="text"
+                    [formControlName]="field">
             </div>
             <div class="flex-box-space">
-                <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="form.value"
+                <button mat-stroked-button class="main-container select-buttons"
+                    [mat-dialog-close]="form.value"
                     type="submit">Submit</button>
-                <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
+                <button mat-stroked-button class="main-container select-buttons"
+                    mat-dialog-close
                     type="submit">Close</button>
             </div>
         </div>
