--- a/frontend/src/app/dialog-info/dialog-info.component.css
+++ b/frontend/src/app/dialog-info/dialog-info.component.css
@@ -4,7 +4,7 @@
     /* overflow: auto; */
 }
 
-.centered-container {
+.center-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -60,6 +60,7 @@ h4 {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
 .segemnt {
     padding: 5px;
 }
