--- a/frontend/src/app/dialog-info/dialog-info.component.html
+++ b/frontend/src/app/dialog-info/dialog-info.component.html
@@ -11,7 +11,7 @@
             <mat-tab-group>
                 <mat-tab label="Base Infomation">
                     <div>
-                        <div class="centered-container">
+                        <div class="center-content">
                             <mat-list class="segemnt">
                                 <mat-list-item role="listitem">
                                     meeting name: {{ meeting.meetingName }}
@@ -134,7 +134,7 @@
             </mat-tab-group>
         </mat-card-content>
     </mat-card>
-    <div class="centered-container">
+    <div class="center-content">
         <button mat-stroked-button mat-dialog-close type="button">Close</button>
     </div>
 </div>
