refactor#11 changed app name possition in smaller screens

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div>
   <div>
-    <h2 class="app-name">Board Meetings App</h2>
+    <div class="app-name-cont">
+      <h2 class="app-name">Board Meetings App</h2>
+    </div>
     <div>
       <router-outlet></router-outlet>
     </div>
