refactor#12: changes for better look on smaller screens rotated horizontally

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
       <router-outlet></router-outlet>
     </div>
   </div>
-  <div class="accent-color" style="padding-bottom: 140px;"></div>
+  <div class="accent-color foot-buffor"></div>
   <div>
     <app-footer></app-footer>
   </div>
