--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="foot-container">
+<div class="foot-container" [ngClass]="{'hide-on-small-screens': !isHomePage}">
     <div *ngIf="!projectInfoError">
         <div class="footer">
             <div class="grid-container">
