--- a/frontend/src/app/dialog-info/dialog-info.component.css
+++ b/frontend/src/app/dialog-info/dialog-info.component.css
@@ -1,14 +1,17 @@
+.dialog {
+    position: relative;
+    padding-bottom: 20px;
+}
+
 .scrollable-content {
-    max-height: 750px;
-    box-shadow: none;
-    /* overflow: auto; */
+    max-height: 80vh;
+    overflow-y: auto;
 }
 
 .center-content {
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 
 .mat-mdc-list-item {
@@ -65,9 +68,36 @@ h4 {
     padding: 5px;
 }
 
+.fixed-close-button {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 @media only screen and (max-height: 750px) {
     .scrollable-content {
         max-height: 500px;
+    }
+
+    .dialog {
+        width: 80vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        border-radius: 0;
+    }
+
+    .fixed-close-button {
+        position: fixed;
+        bottom: 10px;
+        width: 80%;
+        display: flex;
+        justify-content: center;
+        z-index: 1000;
     }
 
     @media only screen and (max-height: 500px) {
