--- a/frontend/src/app/new-meeting-page/tasks/tasks.component.css
+++ b/frontend/src/app/new-meeting-page/tasks/tasks.component.css
@@ -1,3 +1,10 @@
 .indent {
     padding-left: 10px;
 }
+
+
+@media screen and (max-width: 599px) {
+    .custom-exp-panel {
+        padding: 10px
+    }
+}
