--- a/frontend/src/assets/my-style.scss
+++ b/frontend/src/assets/my-style.scss
@@ -17,6 +17,8 @@ $board-meetings-theme: mat.define-light-theme((color: (primary: $my-primary,
   --my-accent-color: #{mat.get-color-from-palette($my-accent)};
   --my-primary-background-color: rgb(255, 255, 255);
   --my-accent-background-color: rgb(194, 208, 255);
+  --my-error-background-color: #72682f;
+
 }
 
 
